2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* NEWS: avr-libc 1.6 branched
	* configure.ac: bump to 1.7.0-20071220

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* xml/patch-headers.py: Update for new devices and header files.
	* xml/Atmel2libc.py: More tweaks for strange Atmel XML files.
	* doc/api/vectortable.dox: Regenerate from XML.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/bench.dox: Some minor spelling and grammar fixes to
	Dmitry's fine benchmark page.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Resolve all doxygen warnings except the "is
	not documented" ones.
	* doc/api/library.dox: (Ditto.)
	* doc/api/overview.dox: (Ditto.)
	* doc/api/porting.dox: (Ditto.)
	* doc/api/tools-install.dox: (Ditto.)
	* doc/examples/stdiodemo/stdiodemo.dox: (Ditto.)
	* include/avr/fuse.h: (Ditto.)
	* include/avr/lock.h: (Ditto.)
	* include/util/atomic.h: (Ditto.)

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21484: Documentation build for avr/version.h does not
	susbstitute autoconf macros
	* doc/api/doxygen.config.in (INPUT): replace version.h.in by
	version.h so the doxygen build uses the processed file.

2007-12-19  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/stdlib.h: Add '__' prefix with function args.

	* include/string.h: Add '__' prefix with function args. The ffs(),
	ffsl(), ffsll(): cosmetic changes to improve Doxygen output.

	* tests/simulate/math/isinf-01.c: New file.

	* include/math.h: Fix a few documentation errors (inherited from
	1.4). Make args names in doc adequate ones in function declaration.
	Use the '\a' Doxygen's command instead to '\c' anywhere.

	Add CLI to abort() and exit() functions, since GCC's _exit()
	does not disable interrupts today.
	* libc/stdlib/abort.S: Add CLI before jump to _exit.
	* libc/stdlib/exit.S: Ditto.
	* include/stdlib.h: Document the CLI.
	* tests/simulate/stdlib/abort-1.c: New file.

2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
