@@ -1,3 +1,14 @@
+2007-12-20  Anatoly Sokolov <aesok@post.ru>
+
+	* configure.ac: Add 'avr35' architecture. Move AT90USB82 and 
+	AT90USB162 devices to 'avr35' architecture.
+	* devtools/gen-avr-lib-tree.sh (AVR_ARH_INFO): Add 'avr35' 
+	architecture.
+	(AVR3_DEV_INFO): Add AT90USB82 and AT90USB162 devices.
+	(AVR35_DEV_INFO): New.
+	(AVR5_DEV_INFO): Remove AT90USB82 and AT90USB162 devices.
+	* doc/api/using-tools.dox: Document 'avr35'.
+
 2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* NEWS: avr-libc 1.6 branched
